examples/test/testpolicy5903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5903
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key16: value32
      key5: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value46
          key19: value47
          key47: value49
      podSelector:
        matchLabels:
          key13: value8
